allow turning on/off VoteToSkip requirement in config.txt

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -185,6 +185,13 @@ aliases {
 
 transforms = {}
 
+// If this is set to true, users need to vote to skip songs 
+// (number of votes must be greater than half of the number of users in voice channel).
+// Only bot owner can skip without needing votes
+//
+// If this is set to false, votes are never needed to skip songs.
+
+votetoskip=true
 
 // If you set this to true, it will enable the eval command for the bot owner. This command
 // allows the bot owner to run arbitrary code from the bot's account.
